--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,32 @@
         android:theme="@style/Theme.Petshop"
         tools:targetApi="31">
         <activity
-            android:name=".HistoryActivity"
+            android:name=".HomeActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".AddAnimalActivity"
-            android:exported="false">
+            android:name=".HomeActivity1"
+            android:exported="false"
+            android:label="@string/title_activity_home1">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".DashboardActivity"
-            android:exported="false">
+            android:name=".Home"
+            android:exported="false"
+            android:label="@string/title_activity_home">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".TestActivity"
+            android:exported="false"
+            android:label="@string/title_activity_test">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -40,6 +50,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
